# modernmetric

./: .gitignore  .pre-commit-config.yaml  BSD_LICENSE  LICENSE  MANIFEST.in  README.md  VERSION.py  make_version.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yaml
.github/workflows/: black.yml  build.yml  codecov.yml  test.yml
modernmetric/: __init__.py  __main__.py  cache.py  config.py  diff_process.py  fp.py  license.py  samplefilelist.json  scan.py
modernmetric/cls/: base.py  base_calc.py  base_stats.py  modules.py
modernmetric/cls/calc/: halstead.py  maintenance.py  pylint.py  tiobe.py
modernmetric/cls/importer/: base.py  filtered.py
modernmetric/cls/importer/mods/: csv.py  json.py
modernmetric/cls/metric/: comments.py  cyclomatic.py  fanout.py  loc.py  operands.py  operators.py
modernmetric/cls/stats/: stats.py
test/: test.stats.json  test_large_binary.py  test_rsx_support.py  test_self_scan.py
test/fixtures/: Sample.rsx
testfiles/: samplefilelist.json  samplefilelist2.json  test.py  test.ts  test_kr.c
