[build-system]
requires = [
    "hatchling",
    "setuptools",
    "setuptools_scm[toml]>=6.0",
    "build",
    "hatch-requirements-txt"
]
build-backend = "hatchling.build"

[project]
name = "modernmetric"
authors = [
    {name = "Jason Nichols", email = "github@verinfast.com"},
]
description = "Calculate code metrics in various languages"
readme = "README.md"
license = "CC-BY-NC-4.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dynamic = ["dependencies", "version"]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "pytest",
    "pytest-cov"
]

[project.scripts]
modernmetric = "modernmetric.__main__:main"
modernmetric-test = "test.test_self_scan:main"

[project.urls]
"Homepage" = "https://github.com/verinfast/modernmetric"
"Bug Tracker" = "https://github.com/verinfast/modernmetric/issues"
"Source" = "https://github.com/verinfast/modernmetric"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
^/VERSION\.py$
'''

[tool.setuptools.packages.find]
where = ["."]
include = ["modernmetric*", "test*"]

[tool.hatch.version]
path = "VERSION.py"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
